Bug 350379 - KMail configuration dialog is too tall
Summary: KMail configuration dialog is too tall
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-19 17:07 UTC by Alexander Potashev
Modified: 2015-07-29 09:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (146.49 KB, image/png)
2015-07-22 06:11 UTC, Sudhir Khanger
Details
screenshot (124.43 KB, image/png)
2015-07-28 22:59 UTC, Alexander Potashev
Details
screenshot (90.02 KB, image/png)
2015-07-28 23:02 UTC, Alexander Potashev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2015-07-19 17:07:05 UTC
KMail configuration dialog is too tall because of the tab Appearance -> Message. It now includes the section "Enable Gravatar Support" which significantly increased the height of the dialog.

Reproducible: Always
Comment 1 Laurent Montel 2015-07-20 05:34:39 UTC
I don't have problem here, we don't hardcode size.
Size is saved when we close dialog first time (and each time that it closed).
But initialize size is not define.
So I can't fix existing size.
Comment 2 Alexander Potashev 2015-07-20 12:33:46 UTC
I meant the _minimum_ height of the dialog is around 880 pixels. This does not fit my laptop screen at max. resolution of 1366x768.
Comment 3 Laurent Montel 2015-07-21 19:01:30 UTC
Git commit bdd0fe469fae2ef218ead570378873c03585d5f9 by Montel Laurent.
Committed on 21/07/2015 at 19:01.
Pushed by mlaurent into branch 'master'.

Fix Bug 350379 - KMail configuration dialog is too tall

M  +27   -0    messageviewer/gravatar/autotests/gravatarconfiguresettingsdialogtest.cpp
M  +3    -0    messageviewer/gravatar/autotests/gravatarconfiguresettingsdialogtest.h
M  +11   -88   messageviewer/gravatar/autotests/gravatarconfigwidgettest.cpp
M  +6    -10   messageviewer/gravatar/gravatarconfiguresettingsdialog.cpp
M  +19   -70   messageviewer/gravatar/gravatarconfigwidget.cpp
M  +4    -11   messageviewer/gravatar/gravatarconfigwidget.h

http://commits.kde.org/kdepim/bdd0fe469fae2ef218ead570378873c03585d5f9
Comment 4 Sudhir Khanger 2015-07-22 06:11:38 UTC
Created attachment 93684 [details]
screenshot
Comment 5 Sudhir Khanger 2015-07-22 06:14:21 UTC
Alexander does you problem go away if you disable Gravatar settings. I have the same problem for reasons unclear to me. Toggling Gravatar settings doesn't do anything.

This is a new problem on a clean install of Fedora 22. I didn't have this problem on most previous releases of Plasma.
Comment 6 Alexander Potashev 2015-07-28 22:59:46 UTC
Created attachment 93782 [details]
screenshot

Yes, the dialog is now 690 pixels high here which is acceptable for me. The Gravatar configuration now look like in the attached screenshot.
Comment 7 Alexander Potashev 2015-07-28 23:02:37 UTC
Created attachment 93785 [details]
screenshot

Yes, the dialog is now 690 pixels high here which is acceptable for me. The Gravatar configuration now look like in the attached screenshot.
Comment 8 Sudhir Khanger 2015-07-29 05:30:27 UTC
I don't even have Gravatar configure button. Enable/Disabling it doesn't seem to do anything. Maybe I am hitting a different bug.
Comment 9 Alexander Potashev 2015-07-29 09:30:18 UTC
You probably didn't update the source code from Git.