Fix Bug 350379 - KMail configuration dialog is too tall

BUG: 350379