messageviewer/gravatar/gravatarconfigwidget.cpp
@@ -17,6 +17,7 @@
 
 #include "gravatarconfigwidget.h"
 #include "pimcommon/gravatar/gravatarcache.h"
+#include "gravatarconfiguresettingsdialog.h"
 #include <QDebug>
 #include <QVBoxLayout>
 #include <KLocalizedString>
@@ -25,6 +26,7 @@
 #include <QLabel>
 #include <QDir>
 #include <QSpinBox>
+#include <QPointer>
 #include <QGroupBox>
 #include "settings/globalsettings.h"
 #include "pimcommon/widgets/configureimmutablewidgetutils.h"
@@ -35,66 +37,35 @@ using namespace PimCommon::ConfigureImmutableWidgetUtils;
 GravatarConfigWidget::GravatarConfigWidget(QWidget *parent)
     : QWidget(parent)
 {
-    QVBoxLayout *mainLayout = new QVBoxLayout;
+    QHBoxLayout *mainLayout = new QHBoxLayout;
     setLayout(mainLayout);
     mainLayout->setMargin(0);
 
-    mEnableGravatarSupport = new QGroupBox(i18n("Enable Gravatar Support"));
+    mEnableGravatarSupport = new QCheckBox(i18n("Enable Gravatar Support"));
     mEnableGravatarSupport->setObjectName(QStringLiteral("gravatarcheckbox"));
-    mEnableGravatarSupport->setCheckable(true);
     mEnableGravatarSupport->setChecked(false);
-
-    QVBoxLayout *groupboxLayout = new QVBoxLayout;
-    mEnableGravatarSupport->setLayout(groupboxLayout);
     mainLayout->addWidget(mEnableGravatarSupport);
 
-    mUseLibravatar = new QCheckBox(i18n("Use Libravatar"));
-    mUseLibravatar->setObjectName(QStringLiteral("uselibravatarcheckbox"));
-    groupboxLayout->addWidget(mUseLibravatar);
+    mConfigureGravatarSetting = new QPushButton(i18n("Configure"));
+    mConfigureGravatarSetting->setObjectName(QStringLiteral("configure"));
+    mainLayout->addWidget(mConfigureGravatarSetting);
+    connect(mConfigureGravatarSetting, &QPushButton::clicked, this, &GravatarConfigWidget::slotConfigureSettings);
+    mainLayout->addStretch();
 
-    mFallbackGravatar = new QCheckBox(i18n("Fallback to Gravatar"));
-    mFallbackGravatar->setObjectName(QStringLiteral("fallbackgravatar"));
-    groupboxLayout->addWidget(mFallbackGravatar);
-
-    mUseDefaultPixmap = new QCheckBox(i18n("Use Default Image"));
-    mUseDefaultPixmap->setObjectName(QStringLiteral("usedefaultimage"));
-    groupboxLayout->addWidget(mUseDefaultPixmap);
-
-    QHBoxLayout *cacheSizeLayout = new QHBoxLayout;
-    groupboxLayout->addLayout(cacheSizeLayout);
-    QLabel *lab = new QLabel(i18n("Gravatar Cache Size:"));
-    lab->setObjectName(QStringLiteral("gravatarcachesizelabel"));
-    cacheSizeLayout->addWidget(lab);
-
-    mGravatarCacheSize = new QSpinBox;
-    mGravatarCacheSize->setMinimum(1);
-    mGravatarCacheSize->setMaximum(9999);
-    mGravatarCacheSize->setObjectName(QStringLiteral("gravatarcachesize"));
-    connect(mGravatarCacheSize, SIGNAL(valueChanged(int)), this, SLOT(slotGravatarCacheSizeChanged()));
-    cacheSizeLayout->addWidget(mGravatarCacheSize);
-    cacheSizeLayout->addStretch();
-
-    QHBoxLayout *buttonLayout = new QHBoxLayout;
-    groupboxLayout->addLayout(buttonLayout);
-    mClearGravatarCache = new QPushButton(i18n("Clear Gravatar Cache"));
-    mClearGravatarCache->setObjectName(QStringLiteral("cleargravatarcachebutton"));
-    buttonLayout->addWidget(mClearGravatarCache);
-    buttonLayout->addStretch();
-
-    connect(mEnableGravatarSupport, &QGroupBox::clicked, this, &GravatarConfigWidget::slotGravatarEnableChanged);
-
-    connect(mUseDefaultPixmap, &QAbstractButton::clicked, this, &GravatarConfigWidget::configChanged);
-    connect(mClearGravatarCache, &QAbstractButton::clicked, this, &GravatarConfigWidget::slotClearGravatarCache);
-
-    connect(mUseLibravatar, &QAbstractButton::clicked, this, &GravatarConfigWidget::configChanged);
-    connect(mFallbackGravatar, &QAbstractButton::clicked, this, &GravatarConfigWidget::configChanged);
-
+    connect(mEnableGravatarSupport, &QCheckBox::toggled, this, &GravatarConfigWidget::slotGravatarEnableChanged);
     updateWidgetState(false);
 }
 
 GravatarConfigWidget::~GravatarConfigWidget()
 {
 
+}
+
+void GravatarConfigWidget::slotConfigureSettings()
+{
+    QPointer<MessageViewer::GravatarConfigureSettingsDialog> dlg = new MessageViewer::GravatarConfigureSettingsDialog(this);
+    dlg->exec();
+    delete dlg;
 }
 
 void GravatarConfigWidget::slotGravatarEnableChanged(bool state)
@@ -105,20 +76,12 @@ void GravatarConfigWidget::slotGravatarEnableChanged(bool state)
 
 void GravatarConfigWidget::updateWidgetState(bool state)
 {
-    mUseDefaultPixmap->setEnabled(state);
-    mClearGravatarCache->setEnabled(state);
-    mGravatarCacheSize->setEnabled(state);
-    mFallbackGravatar->setEnabled(state);
-    mUseLibravatar->setEnabled(state);
+    mConfigureGravatarSetting->setEnabled(state);
 }
 
 void GravatarConfigWidget::save()
 {
-    saveGroupBox(mEnableGravatarSupport, MessageViewer::GlobalSettings::self()->gravatarSupportEnabledItem());
-    saveCheckBox(mUseDefaultPixmap, MessageViewer::GlobalSettings::self()->gravatarUseDefaultImageItem());
-    saveSpinBox(mGravatarCacheSize, MessageViewer::GlobalSettings::self()->gravatarCacheSizeItem());
-    saveCheckBox(mFallbackGravatar, MessageViewer::GlobalSettings::self()->fallbackToGravatarItem());
-    saveCheckBox(mUseLibravatar, MessageViewer::GlobalSettings::self()->libravatarSupportEnabledItem());
+    saveCheckBox(mEnableGravatarSupport, MessageViewer::GlobalSettings::self()->gravatarSupportEnabledItem());
     if (!mEnableGravatarSupport->isChecked()) {
         PimCommon::GravatarCache::self()->clearAllCache();
     }
@@ -127,10 +90,6 @@ void GravatarConfigWidget::save()
 void GravatarConfigWidget::doLoadFromGlobalSettings()
 {
     loadWidget(mEnableGravatarSupport, MessageViewer::GlobalSettings::self()->gravatarSupportEnabledItem());
-    loadWidget(mUseDefaultPixmap, MessageViewer::GlobalSettings::self()->gravatarUseDefaultImageItem());
-    loadWidget(mGravatarCacheSize, MessageViewer::GlobalSettings::self()->gravatarCacheSizeItem());
-    loadWidget(mFallbackGravatar, MessageViewer::GlobalSettings::self()->fallbackToGravatarItem());
-    loadWidget(mUseLibravatar, MessageViewer::GlobalSettings::self()->libravatarSupportEnabledItem());
     updateWidgetState(mEnableGravatarSupport->isChecked());
 }
 
@@ -139,15 +98,5 @@ void GravatarConfigWidget::doResetToDefaultsOther()
     const bool bUseDefaults = MessageViewer::GlobalSettings::self()->useDefaults(true);
     doLoadFromGlobalSettings();
     GlobalSettings::self()->useDefaults(bUseDefaults);
-}
-
-void GravatarConfigWidget::slotClearGravatarCache()
-{
-    PimCommon::GravatarCache::self()->clearAllCache();
-}
-
-void GravatarConfigWidget::slotGravatarCacheSizeChanged()
-{
-    Q_EMIT configChanged(true);
 }
 
